--- a/index.html
+++ b/index.html
@@ -3,75 +3,28 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-        <link rel="stylesheet" href="/src/css/style.css">
-        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&amp;family=IBM+Plex+Serif:wght@300;400;500;600;700&amp;family=IBM+Plex+Mono:wght@300;400;500;600;700&amp;family=Inter&amp;display=swap" rel="stylesheet">
-
         <title>Document</title>
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&amp;display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&amp;family=IBM+Plex+Serif:wght@300;400;500;600;700&amp;family=IBM+Plex+Mono:wght@300;400;500;600;700&amp;family=Inter&amp;display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="/src/css/style.css">
     </head>
     <body>
-        <header class="navbar">
-            <div class="navbar-logo text-logo">
-                <a class="navbar-logo text text-lg text-black text-logo" href="#"><svg class="navbar-logo"  xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"></path><path d="m9 12 2 2 4-4"></path></svg>
-                    SimpleLanding
-                </a>
-            </div>
-            <nav>
-                <ul class="navbar-menu">
-                    <li class="navbar-menu_li text text-sm">Преимущества</li>
-                    <li class="navbar-menu_li text text-sm">Цены</li>
-                    <li class="navbar-menu_li text text-sm">Контакты</li>
-                </ul>
-            </nav>
-            <div class="navbar-btn">
-                <a class="btn btn-indigo btn-text text text-white text-sm" href="#">Начать</a>
-            </div>
-        </header>
-        <main>
-            <section>
-                <div class="hero-container">
-                    <h1 class="hero-title text text-xxl text-white tight">Создайте идеальный сайт за минуты</h1>
-                    <p class="hero-text text text-lg text-white text-no_weigth">Интуитивный конструктор, мощные инструменты и прозрачные цены. Начните бесплатно прямо сейчас.</p>
-                    <div class="hero-btn">
-                        <a class="btn-lg btn-indigo btn-text text text-base text-white" href="#">Попробовать бесплатно</a>
-                        <a class="btn-lg btn-transparent btn-text text text-base text-white" href="#">Узнать больше</a>
-                    </div>
+        <div class="container flex flex_center">
+            <div class="text text_center text_tight text_semobold text_xxl">
+                <div class="logo">
+                    <svg width="28" height="28" viewBox="0 0 24 24" stroke="white" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="">
+                        <circle cx="12" cy="12" r="10" class=""></circle>
+                        <path d="M8 12h8M12 8v8" class=""></path>
+                    </svg>
                 </div>
-            </section>
-            <section>
-                <div class="features-container">
-                    <div class="features-title-container">
-                        <h2 class="features-title text text-xl tight">Почему выбирают нас</h2>
-                        <p class="features-text text text-sm text-slate-600">Мы упрощаем создание сайтов, предоставляя мощные функции без лишней сложности.</p>
-                    </div>
-                    <div class="features-content-container">
-                        <div class="features-content">
-                            <h3>Мгновенное развертывание</h3>
-                            <p>Публикуйте изменения в реальном времени без сложных настроек.</p>
-                        </div>
-                        <div class="features-content">
-                            <h3>Гибкие шаблоны</h3>
-                            <p>Библиотека красивых и адаптивных шаблонов под любые задачи.</p>
-                        </div>
-                        <div class="features-content">
-                            <h3>Надежная защита</h3>
-                            <p>SSL и защита от DDoS по умолчанию для безопасности вашего проекта.</p>
-                        </div>
-                        <div class="features-content">
-                            <h3>Быстрая загрузка</h3>
-                            <p>Оптимизированная инфраструктура гарантирует скорость и стабильность.</p>
-                        </div>
-                        <div class="features-content">
-                            <h3>Поддержка разработчиков</h3>
-                            <p>Документация и API для гибкой интеграции и автоматизации.</p>
-                        </div>
-                        <div class="features-content">
-                            <h3>Круглосуточная поддержка</h3>
-                            <p>Команда экспертов готова помочь в любое время, 7 дней в неделю.</p>
-                        </div>
-                    </div>
-                </div>
-            </section>
-        </main>
+                <span>Лендинг</span>
+            </div>
+            <h1 class="logo-title text text_center text_tight text_semobold text_xxxxl">
+                Очень простой лендинг
+            </h1>
+            <p class="logo_text text text_center text-lg">
+                Минимум кода, максимум пользы. Используй этот шаблон для практики своих CSS-навыков!
+            </p>
+        </div>
     </body>
 </html>
