--- a/index.html
+++ b/index.html
@@ -1,30 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
-        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&amp;display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&amp;family=IBM+Plex+Serif:wght@300;400;500;600;700&amp;family=IBM+Plex+Mono:wght@300;400;500;600;700&amp;family=Inter&amp;display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="/src/css/style.css">
-    </head>
-    <body>
-        <div class="container flex flex_center">
-            <div class="text text_center text_tight text_semobold text_xxl">
-                <div class="logo">
-                    <svg width="28" height="28" viewBox="0 0 24 24" stroke="white" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="">
-                        <circle cx="12" cy="12" r="10" class=""></circle>
-                        <path d="M8 12h8M12 8v8" class=""></path>
-                    </svg>
-                </div>
-                <span>Лендинг</span>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="/src/css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
+    <title>Wishbone&Partners</title>
+</head>
+<body>
+    <header>
+        <div class="head_container center">
+                <img class="logo" src="/src/assets/img/logo.png">
+            <div class="navmenu">
+                <nav>
+                    <ul class="navmenu_group center">
+                        <li class="navmenu_item text">Projects</li>
+                        <li class="navmenu_item text">About</li>
+                        <li class="navmenu_item text">News</li>
+                        <li class="navmenu_item text">Team</li>
+                        <li class="navmenu_item text">Contact</li>
+                        <a class="navmenu_item btn text">Get template</a>
+                    </ul>
+                </nav>
             </div>
-            <h1 class="logo-title text text_center text_tight text_semobold text_xxxxl">
-                Очень простой лендинг
-            </h1>
-            <p class="logo_text text text_center text-lg">
-                Минимум кода, максимум пользы. Используй этот шаблон для практики своих CSS-навыков!
-            </p>
         </div>
-    </body>
+    </header>
+    <main>
+        <div class="hero-container">
+            <div class="hero-banner center">
+                <p class="brand_name text">Wishbone+Partners</p>
+                <h1 class="hero_title text">The home of beautiful architecture.</h1>
+                <p class="hero_text text">We are an architecture firm with a focus on beautiful but functional design. At its heart, we believe design is about usability and accessibility — these are the guiding principles for our work. Read more about our previous projects, our process and our team below.</p>
+                <p class="btn_hero text">Read more</p>
+            </div>
+            <div class="hero-img">
+                <img src="/src/assets/img/hero-banner.jpg" alt="">
+            </div>
+        </div>
+        <div class="our-firm-container">
+            <div class="container">
+                <h3>Our firm</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+            </div>
+        </div>
+    </main>
+</body>
 </html>
