commit number four

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="head_container center">
-                <img class="logo" src="/src/assets/img/logo.png">
+                <img class="logo" src="/src/assets/img/logo.png" alt="Здесь должен быть логотип">
             <div class="navmenu">
                 <nav>
                     <ul class="navmenu_group center">
@@ -40,12 +40,22 @@
             </div>
         </div>
         <div class="our-firm-container">
-            <div class="container">
-                <h3>Our firm</h3>
+            <h3 class="our-firm-title text">Our firm</h3>
+            <div class="our-firm-text text">    
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+                <footer class="our-firm-author">
+                    <img class="avatar" src="/src/assets/img/avatar.jpg" alt="Фотка автора">
+                    <div class="our-firm-author_name">
+                        <cite class="author_name text">Stephen Collier</cite>
+                        <p class="author_job text">Senior Partner</p>
+                    </div>
+                </footer>
             </div>
+        </div>
+        <div class="second_hero-banner-container">
+            <img src="/src/assets/img/hero-banner-2.jpg" alt="" class="second_hero-banner_img">
         </div>
     </main>
 </body>
