Commit number five

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <main>
         <div class="hero-container">
             <div class="hero-banner center">
-                <p class="brand_name text">Wishbone+Partners</p>
+                <h4 class="brand_name text">Wishbone+Partners</h4>
                 <h1 class="hero_title text">The home of beautiful architecture.</h1>
                 <p class="hero_text text">We are an architecture firm with a focus on beautiful but functional design. At its heart, we believe design is about usability and accessibility — these are the guiding principles for our work. Read more about our previous projects, our process and our team below.</p>
                 <p class="btn_hero text">Read more</p>
@@ -55,7 +55,46 @@
             </div>
         </div>
         <div class="second_hero-banner-container">
-            <img src="/src/assets/img/hero-banner-2.jpg" alt="" class="second_hero-banner_img">
+            <img src="/src/assets/img/hero-banner-2.jpg" alt="" class="wide_hero-banner_img">
+            <div class="hero-banner-overlay">
+                <h4 class="hero-banner_title-text text">Reeding House</h4>
+                <p class="hero-banner_text text">Lorem ipsum dolor sit amet, dolor sit amet dolor sit amet..</p>
+            </div>
+        </div>
+        <div class="our_process-container">
+            <h3 class="our_process-text text center">Our process</h3>
+            <h2 class="our_process-title text center">How we do what we do.</h2>
+            <div class="how-do-block">
+                <div class="how-do-point text">
+                    <img src="/src/assets/img/Sketching-Icon.png" alt="" class="how-do-point_icon">
+                    <h4 class="how-do-title">Sketching</h4>
+                    <p class="how-do-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ut tristique libero. Nulla luctus sapien ac arcu tempor, vitae tempor leo iaculis.</p>
+                </div>
+                <div class="how-do-point text">
+                    <img src="/src/assets/img/Finalizing-Icon.png" alt="" class="how-do-point_icon">
+                    <h4 class="how-do-title">Finalizing</h4>
+                    <p class="how-do-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+                </div>
+                <div class="how-do-point text">
+                    <img src="/src/assets/img/Building-Icon.png" alt="" class="how-do-point_icon">
+                    <h4 class="how-do-title">Building</h4>
+                    <p class="how-do-text">Nulla ut tristique libero. Lorem ipsum ut tristique libero. Nulla luctus sapien ac arcu tempor, vitae lorem ipsum dolor leo iaculis.</p>
+                </div>
+            </div>
+        </div>
+        <div class="third_hero-banner-container">
+            <img src="/src/assets/img/hero-banner-3.jpg" alt="" class="wide_hero-banner_img">
+            <div class="hero-banner-overlay">
+                <h4 class="hero-banner_title-text text">The marble staircase</h4>
+                <p class="hero-banner_text text">Lorem ipsum dolor sit amet, dolor sit amet dolor sit amet..</p>
+            </div>
+        </div>
+        <div class="prior_clients-container">
+            <div class="prior_clients-text_block">
+                <h4 class="prior_clients-subtitle text">prior clients</h4>
+                <h2 class="prior_clients-title text">Happy customers.</h2>
+                <p class="prior_clients-text text">Morbi neque ex, condimentum dapibus congue et, vulputate ut ligula. Vestibulum sit amet urna turpis. Mauris euismod elit et nisi ultrices, ut faucibus orci tincidunt.</p>
+            </div>
         </div>
     </main>
 </body>
